<resources>
    <string name="app_name">WhoPays</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="button_login">Login</string>
    <string name="button_create_user">Nutzer anlegen</string>
    <string name="nameOrEmail">Name / E-Mail</string>
    <string name="pin">PIN</string>
    <string name="head_whopays">WhoPays</string>
    <string name="pin_wiederholen">PIN wiederholen</string>
    <string name="register">Registrieren</string>
    <string name="neu_hier">Neu hier?</string>
    <string name="btn_logout">Logout</string>
    <string name="setUserError">Name eingeben!</string>
    <string name="setEmailError">E-Mail eingeben!</string>
    <string name="setPwdError">PIN eingeben!</string>
    <string name="setPwdConfirmError">PIN wiederholen!</string>
    <string name="setPwdNotMatchingError">PINs stimmen nicht überein</string>
    <string name="HelloUser">"Hello, %1$s"</string>
    <string name="devuser" translatable="false">christopher.brinker@web.de</string>
    <string name="devpwd" translatable="false">111111</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>